--- a/.editorconfig
+++ b/.editorconfig
@@ -274,10 +274,22 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggest
 
 # ReSharper properties
 resharper_autodetect_indent_settings = true
+resharper_braces_for_dowhile = required_for_multiline
+resharper_braces_for_fixed = required_for_multiline
+resharper_braces_for_for = required_for_multiline
+resharper_braces_for_foreach = required_for_multiline
+resharper_braces_for_ifelse = required_for_multiline
+resharper_braces_for_lock = required_for_multiline
+resharper_braces_for_using = required_for_multiline
+resharper_braces_for_while = required_for_multiline
+resharper_braces_redundant = true
+resharper_csharp_wrap_lines = false
 resharper_formatter_off_tag = @formatter:off
 resharper_formatter_on_tag = @formatter:on
 resharper_formatter_tags_enabled = true
 resharper_indent_preprocessor_directives = normal
+resharper_object_creation_when_type_evident = explicitly_typed
+resharper_place_field_attribute_on_same_line = if_owner_is_single_line
 resharper_use_indent_from_vs = false
 
 # ReSharper inspection severities
