Effect Indicate UI System
중간 저장

--- a/.editorconfig
+++ b/.editorconfig
@@ -283,11 +283,22 @@ resharper_braces_for_lock = required_for_multiline
 resharper_braces_for_using = required_for_multiline
 resharper_braces_for_while = required_for_multiline
 resharper_braces_redundant = true
+resharper_csharp_int_align_comments = true
 resharper_csharp_wrap_lines = false
 resharper_formatter_off_tag = @formatter:off
 resharper_formatter_on_tag = @formatter:on
 resharper_formatter_tags_enabled = true
 resharper_indent_preprocessor_directives = normal
+resharper_int_align_assignments = true
+resharper_int_align_fields = true
+resharper_int_align_invocations = true
+resharper_int_align_methods = true
+resharper_int_align_nested_ternary = true
+resharper_int_align_parameters = true
+resharper_int_align_properties = true
+resharper_int_align_switch_expressions = true
+resharper_int_align_switch_sections = true
+resharper_int_align_variables = true
 resharper_object_creation_when_type_evident = explicitly_typed
 resharper_place_field_attribute_on_same_line = if_owner_is_single_line
 resharper_use_indent_from_vs = false
